syntax = "proto3";

package wso2.discovery.apkmgt;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/apkmgtapplication;apkmgtapplication";
option java_package = "org.wso2.choreo.connect.discovery.apkmgt";
option java_outer_classname = "ApkMgtApplicationProto";
option java_multiple_files = false;

// [#protodoc-title: ApplicationDetails]

message Application {
  string uuid = 1;
  string name = 2;
  string owner = 3;
  map<string, string> attributes = 4;
  string subscriber = 5;
  string organization = 6;
  repeated Subscription subscriptions = 7;
  repeated ConsumerKey consumerKeys = 8;
}

message ApplicationDetails {
  repeated Application applications = 1;
}

message ConsumerKey {
  string key = 1;
  string keyManager = 2;
}

message Subscription {
  string uuid = 1;
  string apiUuid = 2;
  string policyId = 3;
  string subscriptionStatus = 4;
  string organization = 5;
  string createdBy = 6;
}